--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import '@fortawesome/fontawesome-free/css/all.css';
@@ -12,6 +14,18 @@ body {
   font-size: 14px;
 }
 
+
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+:root {
+
+  @include mat.fab-overrides((
+    container-color: orange,
+    container-elevation-shadow: red,
+  ));
+
+    --operation-font-size: 16px;
+
+}
 
 
 .logo{
